--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    height: 60px;
+    height: var(--default-layout-header-height);
     width: 100%;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
@@ -8,7 +8,7 @@
 
 .inner {
     height: 100%;
-    width: 1150px;
+    width: var(--default-layout-width);
     background-color: #ccc;
 }
 
