--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+    --search-height: 46px;
+    --search-width: 60px;
     height: var(--default-layout-header-height);
     width: 100%;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -9,6 +11,72 @@
 .inner {
     height: 100%;
     width: var(--default-layout-width);
-    background-color: #ccc;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.search {
+    position: relative;
+    width: 361px;
+    height: var(--search-height);
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: 92px;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    z-index: 1;
+    margin: 0;
+    border: 1.5px solid transparent;
+
+    &::after {
+        content: '';
+        background: rgba(22, 24, 35, 0.12);
+        position: absolute;
+        width: 1px;
+        height: calc(var(--search-height) - 18px);
+        right: calc(var(--search-width) - 1px);
+    }
+    &:focus-within {
+        border-color:rgba(22, 24, 35, 0.2);
+    }
+
+
+    input {
+        font-size: 1.6rem;
+        color: var(--black-color);
+        background: transparent;
+        width: 292px;
+        line-height: 22px;
+        caret-color: var(--primary-color);
+    }
+    input:not(:placeholder-shown) ~ .search-btn{
+        color: var(--black-color);
+    }
+}
+
+.clear, .loading {
+    color: rgba(22, 24, 35, 0.34);
+    position: absolute;
+    right: calc(var(--search-width));
+    margin: 0 16px;
+}
+
+.search-btn {
+    width: var(--search-width);
+    height: 46px;
+    cursor: pointer;
+    padding: 11px 16px 11px 12px;
+    margin: -12px -16px;
+    margin-left: 0;
+    font-size: 2rem;
+    color: rgba(22, 24, 35, 0.34);;
+
+    &:hover {
+        background: rgba(22, 24, 35, 0.03);
+    }
+    &:active {
+        background: rgba(22, 24, 35, 0.06);
+    }
+}
