--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -15,10 +15,11 @@
     justify-content: space-between;
     align-items: center;
 }
-
+.search, .search-result {
+    width: 361px;
+}
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: 92px;
@@ -56,6 +57,19 @@
     }
 }
 
+// .search-result {
+
+// }
+
+.search-title {
+    height: 30px;
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    line-height: 20px;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+}
+
 .clear, .loading {
     color: rgba(22, 24, 35, 0.34);
     position: absolute;
@@ -79,4 +93,11 @@
     &:active {
         background: rgba(22, 24, 35, 0.06);
     }
+}
+.more-btn {
+    font-size: 2rem;
+    margin-left: 16px;
+    padding: 6px 4px;
+    cursor: pointer;
+    background-color: transparent;
 }
